[gd_scene load_steps=20 format=2]

[ext_resource path="res://Boss/anim/Boss Walk/Ani Boss Walk4.png" type="Texture" id=1]
[ext_resource path="res://Boss/Minion.gd" type="Script" id=2]
[ext_resource path="res://UI/HP_Bar_Theme.tres" type="Theme" id=3]
[ext_resource path="res://Boss/anim/Boss Walk/Ani Boss Walk6.png" type="Texture" id=4]
[ext_resource path="res://Boss/anim/Boss Walk/Ani Boss Walk1.png" type="Texture" id=5]
[ext_resource path="res://Boss/anim/Boss Walk/Ani Boss Walk5.png" type="Texture" id=6]
[ext_resource path="res://Boss/anim/Boss Walk/Ani Boss Walk9.png" type="Texture" id=7]
[ext_resource path="res://Boss/anim/Boss Walk/Ani Boss Walk10.png" type="Texture" id=8]
[ext_resource path="res://Boss/anim/Boss Walk/Ani Boss Walk3.png" type="Texture" id=9]
[ext_resource path="res://Boss/anim/Boss Walk/Ani Boss Walk7.png" type="Texture" id=10]
[ext_resource path="res://Boss/anim/Boss Walk/Ani Boss Walk8.png" type="Texture" id=11]
[ext_resource path="res://Boss/anim/Boss Walk/Ani Boss Walk11.png" type="Texture" id=12]
[ext_resource path="res://Boss/anim/Boss Walk/Ani Boss Walk2.png" type="Texture" id=13]
[ext_resource path="res://Boss/anim/idle/Ani Boss Idle1.png" type="Texture" id=14]
[ext_resource path="res://Boss/anim/idle/Ani Boss Idle2.png" type="Texture" id=15]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 14 ), ExtResource( 15 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 13 ), ExtResource( 9 ), ExtResource( 1 ), ExtResource( 6 ), ExtResource( 4 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 12 ) ],
"loop": true,
"name": "walk",
"speed": 15.0
} ]

[sub_resource type="CapsuleShape2D" id=1]
radius = 29.0
height = 40.0

[sub_resource type="CircleShape2D" id=2]
radius = 932.002

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 1.78396, 33.7985 )

[node name="KinematicBody2D" type="KinematicBody2D"]
position = Vector2( 3, 7 )
collision_layer = 2
collision_mask = 2
script = ExtResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( -2.00001, 3.00002 )
scale = Vector2( 0.464844, 0.417969 )
frames = SubResource( 4 )
animation = "idle"
frame = 1
playing = true
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, 1 )
shape = SubResource( 1 )

[node name="DetectionZone" type="Area2D" parent="."]
visible = false
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionZone"]
shape = SubResource( 2 )

[node name="HitBox" type="Area2D" parent="."]
rotation = -3.14159
scale = Vector2( 18.7784, 1.65688 )
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2( -0.07988, -1.81062 )
shape = SubResource( 3 )

[node name="HPBar" type="ProgressBar" parent="."]
margin_left = -42.0
margin_top = -63.0
margin_right = 48.0
margin_bottom = -49.0
theme = ExtResource( 3 )
value = 50.0
percent_visible = false

[connection signal="body_entered" from="DetectionZone" to="." method="_on_DetectionZone_body_entered"]
[connection signal="body_exited" from="DetectionZone" to="." method="_on_DetectionZone_body_exited"]
[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
